--- a/7/lib/sparky-aptus-appcenter/accessories-filemanagers.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-filemanagers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 6, 2022 by pavroo
+Last update: January 14, 2024 by pavroo
 -->
 	<head>
 		<title>Accessories -> File Managers | APTus AppCenter</title>
@@ -54,6 +54,8 @@ Last update: March 6, 2022 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accfil_gnome-commander" class="button1"><img src="images/file-manager.svg" class="appicon"><br />GNOME Commander</a>
+		</td>
 		<td><a href="aptus://accfil_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
 		</td>
 		<td><a href="aptus://accfil_krusader" class="button1"><img src="images/terminix.svg" class="appicon"><br />Krusader</a>
@@ -64,10 +66,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accfil_nautilus" class="button1"><img src="images/file-manager.svg" class="appicon"><br />Nautilus</a>
 		</td>
-		<td><a href="aptus://accfil_nemo" class="button1"><img src="images/file-manager.svg" class="appicon"><br />Nemo</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accfil_nemo" class="button1"><img src="images/file-manager.svg" class="appicon"><br />Nemo</a>
+		</td>
 		<td><a href="aptus://accfil_nnn" class="button1"><img src="images/terminal.svg" class="appicon"><br />nnn</a>
 		</td>
 		<td><a href="aptus://accfil_pcmanfm" class="button1"><img src="images/file-manager.svg" class="appicon"><br />PCmanFM</a>
@@ -78,10 +80,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accfil_rox-filer" class="button1"><img src="images/file-manager.svg" class="appicon"><br />ROX Filer</a>
 		</td>
-		<td><a href="aptus://accfil_spacefm-gtk3" class="button1"><img src="images/file-manager.svg" class="appicon"><br />SpaceFM GTK3</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accfil_spacefm-gtk3" class="button1"><img src="images/file-manager.svg" class="appicon"><br />SpaceFM GTK3</a>
+		</td>
 		<td><a href="aptus://accfil_sunflower" class="button1"><img src="images/file-manager.svg" class="appicon"><br />Sunflower</a>
 		</td>
 		<td><a href="aptus://accfil_thunar" class="button1"><img src="images/file-manager.svg" class="appicon"><br />Thunar</a>
@@ -92,10 +94,10 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accfil_vifm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Vifm</a>
 		</td>
-		<td><a href="aptus://accfil_worker" class="button1"><img src="images/terminix.svg" class="appicon"><br />Worker</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accfil_worker" class="button1"><img src="images/terminix.svg" class="appicon"><br />Worker</a>
+		</td>
 		<td><a href="aptus://accfil_xfe" class="button1"><img src="images/terminix.svg" class="appicon"><br />Xfe</a>
 		</td>
 	</tr>
