--- a/7/lib/sparky-aptus-appcenter/accessories-usb.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-usb.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 5, 2023 by pavroo
+Last update: January 14, 2024 by pavroo
 -->
 	<head>
 		<title>Accessories -> USB Management | APTus AppCenter</title>
@@ -64,7 +64,7 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://accusb_ventoy" class="button1"><img src="images/terminal.svg" class="appicon"><br />Ventoy</a>
 		</td>
-		<td><a href="aptus://accusb_woeusb" class="button1"><img src="images/wine.svg" class="appicon"><br />WoeUSB</a>
+		<td><a href="aptus://accusb_woeusb-ng" class="button1"><img src="images/wine.svg" class="appicon"><br />WoeUSB-ng</a>
 		</td>
 	</tr>
 </tbody>
