--- a/8/lib/sparky-aptus-appcenter/net-email.html
+++ b/8/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 6, 2022 by pavroo
+Last update: January 14, 2024 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -100,7 +100,7 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netema_protonmail-bridge" class="button1"><img src="images/terminal.svg" class="appicon"><br />ProtonMail Bridge</a>
 		</td>
-		<td><a href="aptus://netema_ roundcube" class="button1"><img src="images/web-browser.svg" class="appicon"><br />RoundCube Webmail</a>
+		<td><a href="aptus://netema_ roundcube-core" class="button1"><img src="images/web-browser.svg" class="appicon"><br />RoundCube Webmail</a>
 		</td>
 		<td><a href="aptus://netema_sylpheed" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Sylpheed</a>
 		</td>
