--- a/8/lib/sparky-aptus-appcenter/accessories-archivers.html
+++ b/8/lib/sparky-aptus-appcenter/accessories-archivers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 15, 2021 by pavroo
+Last update: February 7, 2024 by pavroo
 -->
 	<head>
 		<title>Accessories -> Archivers | APTus AppCenter</title>
@@ -40,6 +40,10 @@ Last update: October 15, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://accarc_7zip" class="button1"><img src="images/7zip.svg" class="appicon"><br />7zip</a>
+		</td>
+		<td><a href="aptus://accarc_7zip-rar" class="button1"><img src="images/7zip.svg" class="appicon"><br />7zip rar</a>
+		</td>
 		<td><a href="aptus://accarc_ark" class="button1"><img src="images/arc.svg" class="appicon"><br />Ark</a>
 		</td>
 		<td><a href="aptus://accarc_bzip2" class="button1"><img src="images/bzip.svg" class="appicon"><br />Bzip2</a>
@@ -48,12 +52,12 @@ Last update: October 15, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accarc_engrampa" class="button1"><img src="images/file-roller.svg" class="appicon"><br />Engrampa</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accarc_file-roller" class="button1"><img src="images/file-roller.svg" class="appicon"><br />File Roller</a>
 		</td>
 		<td><a href="aptus://accarc_gzip" class="button1"><img src="images/gzip.svg" class="appicon"><br />Gzip</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accarc_lxqt-archiver" class="button1"><img src="images/file-roller.svg" class="appicon"><br />LXQt Archiver</a>
 		</td>
 		<td><a href="aptus://accarc_lrzip" class="button1"><img src="images/lzip.svg" class="appicon"><br />Lrzip</a>
@@ -62,13 +66,9 @@ Last update: October 15, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accarc_lzma" class="button1"><img src="images/lzip.svg" class="appicon"><br />LZMA</a>
 		</td>
-		<td><a href="aptus://accarc_lzip" class="button1"><img src="images/lzip.svg" class="appicon"><br />Lzip</a>
-		</td>
-		<td><a href="aptus://accarc_p7zip-full" class="button1"><img src="images/7zip.svg" class="appicon"><br />p7zip full</a>
-		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://accarc_p7zip-rar" class="button1"><img src="images/7zip.svg" class="appicon"><br />p7zip rar</a>
+		<td><a href="aptus://accarc_lzip" class="button1"><img src="images/lzip.svg" class="appicon"><br />Lzip</a>
 		</td>
 		<td><a href="aptus://accarc_parchives" class="button1"><img src="images/file-roller.svg" class="appicon"><br />Parchives</a>
 		</td>
