--- a/7/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/7/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 19, 2023 by pavroo
+Last update: February 7, 2024 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -90,12 +90,14 @@ Last update: December 19, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lynx</a>
 		</td>
-		<td><a href="aptus://netweb_microsoft-edge-stable" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Microsoft Edge</a>
+		<td><a href="aptus://netweb_mercury-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Mercury</a>
 		</td>
-		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
+		<td><a href="aptus://netweb_microsoft-edge-stable" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Microsoft Edge</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
+		</td>
 		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
 		</td>
 		<td><a href="aptus://netweb_mullvad-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Mullvad Browser</a>
@@ -106,10 +108,10 @@ Last update: December 19, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_next" class="button1"><img src="images/terminal.svg" class="appicon"><br />Next</a>
 		</td>
-		<td><a href="aptus://netweb_opera-stable" class="button1"><img src="images/opera.svg" class="appicon"><br />Opera</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_opera-stable" class="button1"><img src="images/opera.svg" class="appicon"><br />Opera</a>
+		</td>
 		<td><a href="aptus://netweb_otter-browser" class="button1"><img src="images0/otter.png" class="appicon"><br />Otter</a>
 		</td>
 		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
@@ -120,10 +122,12 @@ Last update: December 19, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_slimjet" class="button1"><img src="images/slimjet.svg" class="appicon"><br />Slimjet</a>
 		</td>
-		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_thorium-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Thorium</a>
+		</td>
+		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
+		</td>
 		<td><a href="aptus://netweb_ungoogled-chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Ungoogled Chromium</a>
 		</td>
 		<td><a href="aptus://netweb_viper-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Viper Browser</a>
@@ -132,9 +136,9 @@ Last update: December 19, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
 		</td>
-		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
-		</td>
-		<td><a href="aptus://netweb_waterfox-g-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Current</a>
+	</tr>
+	<tr>
+		<td><a href="aptus://netweb_waterfox-kde" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox</a>
 		</td>
 	</tr>
 </tbody>
