--- a/7/lib/sparky-aptus-appcenter/net-communication.html
+++ b/7/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 2, 2023 by pavroo
+Last update: March 4, 2024 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -42,6 +42,8 @@ Last update: December 2, 2023 by pavroo
 	<tr>
 		<td><a href="aptus://netcom_android-messages-desktop" class="button1"><img src="images/anbox.svg" class="appicon"><br />Android Messages</a>
 		</td>
+		<td><a href="aptus://netcom_barnowl" class="button1"><img src="images/irc.svg" class="appicon"><br />Barnowl</a>
+		</td>
 		<td><a href="aptus://netcom_bti" class="button1"><img src="images/twitter.svg" class="appicon"><br />bti</a>
 		</td>
 		<td><a href="aptus://netcom_caprine" class="button1"><img src="images/caprine.svg" class="appicon"><br />Caprine</a>
@@ -50,10 +52,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netcom_discord" class="button1"><img src="images/discord.svg" class="appicon"><br />Discord</a>
 		</td>
-		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
+		</td>
 		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
 		</td>
 		<td><a href="aptus://netcom_gajim" class="button1"><img src="images/gajim.svg" class="appicon"><br />Gajim</a>
@@ -64,10 +66,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
 		</td>
-		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
+		</td>
 		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
 		</td>
 		<td><a href="aptus://netcom_jami" class="button1"><img src="images/jami.svg" class="appicon"><br />Jami</a>
@@ -78,10 +80,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
 		</td>
-		<td><a href="aptus://netcom_linphone-desktop" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_linphone-desktop" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
+		</td>
 		<td><a href="aptus://netcom_loqui" class="button1"><img src="images/irc.svg" class="appicon"><br />Loqui</a>
 		</td>
 		<td><a href="aptus://netcom_mumble" class="button1"><img src="images/im.svg" class="appicon"><br />Mumble</a>
@@ -92,10 +94,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
 		</td>
-		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
+		</td>
 		<td><a href="aptus://netcom_quaternion" class="button1"><img src="images/im.svg" class="appicon"><br />Quaternion</a>
 		</td>
 		<td><a href="aptus://netcom_rocketchat" class="button1"><img src="images/im.svg" class="appicon"><br />Rocket.Chat</a>
@@ -106,10 +108,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
 		</td>
-		<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
+		</td>
 		<td><a href="aptus://netcom_teams" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams</a>
 		</td>
 		<td><a href="aptus://netcom_teams-for-linux" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams for Linux</a>
@@ -120,10 +122,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netcom_thelounge" class="button1"><img src="images/irc.svg" class="appicon"><br />The Lounge</a>
 		</td>
-		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
+		</td>
 		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
 		</td>
 		<td><a href="aptus://netcom_tokodon" class="button1"><img src="images/im.svg" class="appicon"><br />Tokodon</a>
