--- a/8/lib/sparky-aptus-appcenter/accessories.html
+++ b/8/lib/sparky-aptus-appcenter/accessories.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 29, 2021 by pavroo
+Last update: March 4, 2024 by pavroo
 -->
 	<head>
 		<title>Accessories | APTus AppCenter</title>
@@ -40,36 +40,38 @@ Last update: November 29, 2021 by pavroo
 	<tr>
 		<td><a href="accessories-archivers.html" class="button"><span><script>dict.print('main', 'archivers');</script></span></a>
 		</td>
-		<td><a href="accessories-clipboards.html" class="button"><span><script>dict.print('main', 'clipboards');</script></span></a>
+		<td><a href="accessories-chatbot.html" class="button"><span><script>dict.print('main', 'chatbots');</script></span></a>
 		</td>
-		<td><a href="accessories-devices.html" class="button"><span><script>dict.print('main', 'devices');</script></span></a>
+		<td><a href="accessories-clipboards.html" class="button"><span><script>dict.print('main', 'clipboards');</script></span></a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="accessories-devices.html" class="button"><span><script>dict.print('main', 'devices');</script></span></a>
+		</td>
 		<td><a href="accessories-display.html" class="button"><span><script>dict.print('main', 'display');</script></span></a>
 		</td>
 		<td><a href="accessories-filemanagers.html" class="button"><span><script>dict.print('main', 'filemanagers');</script></span></a>
 		</td>
-		<td><a href="accessories-icons.html" class="button"><span><script>dict.print('main', 'icons');</script></span></a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="accessories-icons.html" class="button"><span><script>dict.print('main', 'icons');</script></span></a>
+		</td>
 		<td><a href="accessories-monitoring.html" class="button"><span><script>dict.print('main', 'monitor');</script></span></a>
 		</td>
 		<td><a href="accessories-terminals.html" class="button"><span><script>dict.print('main', 'term');</script></span></a>
 		</td>
-		<td><a href="accessories-themes.html" class="button"><span><script>dict.print('main', 'themes');</script></span></a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="accessories-themes.html" class="button"><span><script>dict.print('main', 'themes');</script></span></a>
+		</td>
 		<td><a href="accessories-translators.html" class="button"><span><script>dict.print('main', 'translators');</script></span></a>
 		</td>
 		<td><a href="accessories-usb.html" class="button"><span><script>dict.print('main', 'usb');</script></span></a>
 		</td>
-		<td><a href="accessories-weather.html" class="button"><span><script>dict.print('main', 'weather');</script></span></a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="accessories-weather.html" class="button"><span><script>dict.print('main', 'weather');</script></span></a>
+		</td>
 		<td><a href="accessories-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
 		</td>
 		
