--- a/7/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 19, 2023 by pavroo
+Last update: April 2, 2024 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -140,6 +140,8 @@ Last update: December 19, 2023 by pavroo
 	</tr>
 	<tr>
 		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
+		</td>
+		<td><a href="aptus://accoth_xzoom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />XZoom</a>
 		</td>
 		<td><a href="aptus://accoth_zbarcam-qt" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />ZBarcam Qt</a>
 		</td>
