--- a/7/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/7/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 8, 2023 by pavroo
+Last update: April 4, 2024 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -58,32 +58,36 @@ Last update: October 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://videdi_flowblade" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />Flowblade</a>
 		</td>
+		<td><a href="aptus://videdi_freetube" class="button1"><img src="images/youtube.svg" class="appicon"><br />Freetube</a>
+		</td>
 		<td><a href="aptus://videdi_handbrake" class="button1"><img src="images/devede.svg" class="appicon"><br />HandBrake</a>
 		</td>
 		<td><a href="aptus://videdi_imagination" class="button1"><img src="images/devede.svg" class="appicon"><br />Imagination</a>
 		</td>
 		<td><a href="aptus://videdi_kdenlive" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />Kdenlive</a>
 		</td>
-		<td><a href="aptus://videdi_lightworks" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Lightworks</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_lightworks" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Lightworks</a>
+		</td>
 		<!--<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
 		</td>-->
 		<td><a href="aptus://videdi_mystiq" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Mystiq</a>
 		</td>
 		<td><a href="aptus://videdi_nageru" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Nageru</a>
 		</td>
+		<td><a href="aptus://videdi_obs-studio" class="button1"><img src="images/smtube.svg" class="appicon"><br />OBS Studio</a>
+		</td>
 		<td><a href="aptus://videdi_olive-editor" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Olive Editor</a>
 		</td>
 		<td><a href="aptus://videdi_onionmediax" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />OnionMedia X</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://videdi_openshot-qt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot-Qt</a>
 		</td>
 		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
 		</td>
 		<td><a href="aptus://videdi_shorten" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shorten</a>
@@ -92,12 +96,12 @@ Last update: October 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://videdi_shutter-encoder" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shutter Encoder</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://videdi_slowmovideo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Slowmovideo</a>
 		</td>
 		<td><a href="aptus://videdi_sparky-tube" class="button1"><img src="images0/sparky-tube.svg" class="appicon"><br />Sparky Tube</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://videdi_stopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Stopmotion</a>
 		</td>
 		<td><a href="aptus://videdi_vcdimager" class="button1"><img src="images/devede.svg" class="appicon"><br />VCDImager</a>
@@ -106,12 +110,12 @@ Last update: October 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://videdi_videotrans" class="button1"><img src="images/devede.svg" class="appicon"><br />Videotrans</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://videdi_vqmt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />VQMT</a>
 		</td>
 		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://videdi_xjadeo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Xjadeo</a>
 		</td>
 		<td><a href="aptus://videdi_youtube-dl" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube-DL</a>
@@ -120,6 +124,8 @@ Last update: October 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://videdi_youtubedl-gui" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTubeDL GUI</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://videdi_yt-dlp" class="button1"><img src="images/youtube.svg" class="appicon"><br />YT-DLP</a>
 		</td>
 	</tr>
