--- a/8/lib/sparky-aptus-appcenter/office-document.html
+++ b/8/lib/sparky-aptus-appcenter/office-document.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 29, 2021 by pavroo
+Last update: April 2, 2024 by pavroo
 -->
 	<head>
 		<title>Office -> Document Readers | APTus AppCenter</title>
@@ -46,8 +46,6 @@ Last update: November 29, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offdoc_calibre" class="button1"><img src="images/calibre.svg" class="appicon"><br />Calibre</a>
 		</td>
-		<!--<td><a href="aptus://offdoc_comix" class="button1"><img src="images/comix.svg" class="appicon"><br />Comix</a>
-		</td>-->
 		<td><a href="aptus://offdoc_diatheke" class="button1"><img src="images1/document-black.svg" class="appicon"><br />Diatheke</a>
 		</td>
 		<td><a href="aptus://offdoc_evince" class="button1"><img src="images/pdf.svg" class="appicon"><br />Evince</a>
@@ -56,6 +54,10 @@ Last update: November 29, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offdoc_foliate" class="button1"><img src="images/pdf.svg" class="appicon"><br />Foliate</a>
+		</td>
+		<td><a href="aptus://offdoc_koodo-reader" class="button1"><img src="images/pdf.svg" class="appicon"><br />Koodo Reader</a>
+		</td>
 		<td><a href="aptus://offdoc_master-pdf-editor" class="button1"><img src="images/masterpdfeditor.svg" class="appicon"><br />Master PDF Editor</a>
 		</td>
 		<td><a href="aptus://offdoc_mcomix" class="button1"><img src="images/comix.svg" class="appicon"><br />MComix</a>
@@ -64,6 +66,8 @@ Last update: November 29, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offdoc_okular" class="button1"><img src="images/okular.svg" class="appicon"><br />Okular</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offdoc_qpdfview" class="button1"><img src="images/pdf.svg" class="appicon"><br />qpdfview</a>
 		</td>
 		<td><a href="aptus://offdoc_xiphos" class="button1"><img src="images1/document-black.svg" class="appicon"><br />Xiphos</a>
