--- a/8/lib/sparky-aptus-appcenter/net-communication.html
+++ b/8/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 4, 2024 by pavroo
+Last update: May 4, 2024 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -40,6 +40,8 @@ Last update: March 4, 2024 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://netcom_64gram" class="button1"><img src="images/telegram.svg" class="appicon"><br />64Gram</a>
+		</td>
 		<td><a href="aptus://netcom_android-messages-desktop" class="button1"><img src="images/anbox.svg" class="appicon"><br />Android Messages</a>
 		</td>
 		<td><a href="aptus://netcom_barnowl" class="button1"><img src="images/irc.svg" class="appicon"><br />Barnowl</a>
@@ -50,10 +52,10 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_deltachat-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Deltachat Desktop</a>
 		</td>
-		<td><a href="aptus://netcom_discord" class="button1"><img src="images/discord.svg" class="appicon"><br />Discord</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_discord" class="button1"><img src="images/discord.svg" class="appicon"><br />Discord</a>
+		</td>
 		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
 		</td>
 		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
@@ -64,10 +66,10 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_hamsket" class="button1"><img src="images/im.svg" class="appicon"><br />Hamsket</a>
 		</td>
-		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
+		</td>
 		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
 		</td>
 		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
@@ -78,10 +80,10 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_kotatogram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Kotatogram Desktop</a>
 		</td>
-		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
+		</td>
 		<td><a href="aptus://netcom_linphone-desktop" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
 		</td>
 		<td><a href="aptus://netcom_loqui" class="button1"><img src="images/irc.svg" class="appicon"><br />Loqui</a>
@@ -92,17 +94,15 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_pidgin" class="button1"><img src="images/im.svg" class="appicon"><br />Pidgin</a>
 		</td>
-		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
+		</td>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
 		</td>
 		<td><a href="aptus://netcom_quaternion" class="button1"><img src="images/im.svg" class="appicon"><br />Quaternion</a>
 		</td>
 		<td><a href="aptus://netcom_rocketchat" class="button1"><img src="images/im.svg" class="appicon"><br />Rocket.Chat</a>
-		</td>
-		<td><a href="aptus://netcom_scrollz" class="button1"><img src="images/irc.svg" class="appicon"><br />ScrollZ</a>
 		</td>
 		<td><a href="aptus://netcom_sic" class="button1"><img src="images/irc.svg" class="appicon"><br />sic</a>
 		</td>
