--- a/7/lib/sparky-aptus-appcenter/net-communication.html
+++ b/7/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 4, 2024 by pavroo
+Last update: May 4, 2024 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -40,6 +40,8 @@ Last update: March 4, 2024 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://netcom_64gram" class="button1"><img src="images/telegram.svg" class="appicon"><br />64Gram</a>
+		</td>
 		<td><a href="aptus://netcom_android-messages-desktop" class="button1"><img src="images/anbox.svg" class="appicon"><br />Android Messages</a>
 		</td>
 		<td><a href="aptus://netcom_barnowl" class="button1"><img src="images/irc.svg" class="appicon"><br />Barnowl</a>
@@ -50,10 +52,9 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_deltachat-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Deltachat Desktop</a>
 		</td>
+	
 		<td><a href="aptus://netcom_discord" class="button1"><img src="images/discord.svg" class="appicon"><br />Discord</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
 		</td>
 		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
@@ -64,10 +65,10 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_hamsket" class="button1"><img src="images/im.svg" class="appicon"><br />Hamsket</a>
 		</td>
-		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
+		</td>
 		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
 		</td>
 		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
@@ -78,10 +79,10 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_kotatogram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Kotatogram Desktop</a>
 		</td>
-		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
+		</td>
 		<td><a href="aptus://netcom_linphone-desktop" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
 		</td>
 		<td><a href="aptus://netcom_loqui" class="button1"><img src="images/irc.svg" class="appicon"><br />Loqui</a>
@@ -92,10 +93,10 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_pidgin" class="button1"><img src="images/im.svg" class="appicon"><br />Pidgin</a>
 		</td>
-		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
+		</td>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
 		</td>
 		<td><a href="aptus://netcom_quaternion" class="button1"><img src="images/im.svg" class="appicon"><br />Quaternion</a>
@@ -106,10 +107,10 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_sic" class="button1"><img src="images/irc.svg" class="appicon"><br />sic</a>
 		</td>
-		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
+		</td>
 		<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
 		</td>
 		<td><a href="aptus://netcom_teams" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams</a>
@@ -120,10 +121,10 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_telegram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Telegram Desktop</a>
 		</td>
-		<td><a href="aptus://netcom_thelounge" class="button1"><img src="images/irc.svg" class="appicon"><br />The Lounge</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_thelounge" class="button1"><img src="images/irc.svg" class="appicon"><br />The Lounge</a>
+		</td>
 		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
 		</td>
 		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
@@ -134,6 +135,8 @@ Last update: March 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_weechat" class="button1"><img src="images/im.svg" class="appicon"><br />WeeChat</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_whatsapp-for-linux" class="button1"><img src="images/whatsapp.svg" class="appicon"><br />WhatsApp for Linux</a>
 		</td>
 	</tr>
