--- a/8/lib/sparky-aptus-appcenter/games-emulators.html
+++ b/8/lib/sparky-aptus-appcenter/games-emulators.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 2, 2023 by pavroo
+Last update: May 4, 2024 by pavroo
 -->
 	<head>
 		<title>Games -> Emulators | APTus AppCenter</title>
@@ -52,14 +52,14 @@ Last update: December 2, 2023 by pavroo
 		</td>-->
 		<td><a href="aptus://gamemu_fceux" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />FCE Ultra X</a>
 		</td>
-		<td><a href="aptus://gamemu_gnome-video-arcade" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />GNOME Video Arcade</a>
-		</td>
+		<!--<td><a href="aptus://gamemu_gnome-video-arcade" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />GNOME Video Arcade</a>
+		</td>-->
 		<td><a href="aptus://gamemu_hatari" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Hatari</a>
+		</td>
+		<td><a href="aptus://gamemu_mame" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />MAME</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://gamemu_mame" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />MAME</a>
-		</td>
 		<td><a href="aptus://gamemu_mednafen" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Mednafen</a>
 		</td>
 		<td><a href="aptus://gamemu_mednaffe" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Mednaffe</a>
@@ -70,23 +70,17 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_nestopia" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Nestopia</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_osmose-emulator" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Osmose</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_retroarch" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />RetroArch</a>
-		</td>
-		<td><a href="aptus://gamemu_rlvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />rlvm</a>
 		</td>
 		<td><a href="aptus://gamemu_scummvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />ScummVM</a>
 		</td>
 		<td><a href="aptus://gamemu_stella" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Stella</a>
 		</td>
 		<td><a href="aptus://gamemu_visualboyadvance" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Visual Boy Advance</a>
-		</td>
-	</tr>
-	<tr>
-		<td><a href="aptus://gamemu_virtualjaguar" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Virtual Jaguar</a>
 		</td>
 		<td><a href="aptus://gamemu_yabause" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Yabause</a>
 		</td>
