--- a/8/lib/sparky-aptus-appcenter/games-simulation.html
+++ b/8/lib/sparky-aptus-appcenter/games-simulation.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 8, 2023 by pavroo
+Last update: May 4, 2024 by pavroo
 -->
 	<head>
 		<title>Games -> Simulation | APTus AppCenter</title>
@@ -40,8 +40,7 @@ Last update: January 8, 2023 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://gamsim_billard-gl" class="button1"><img src="images1/billard
-		.svg" class="appicon"><br />Billard-gl</a>
+		<td><a href="aptus://gamsim_billard-gl" class="button1"><img src="images1/billard.svg" class="appicon"><br />Billard-gl</a>
 		</td>
 		<td><a href="aptus://gamsim_corsix-th" class="button1"><img src="images/figma.svg" class="appicon"><br />Corsix-th</a>
 		</td>
@@ -51,24 +50,12 @@ Last update: January 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamsim_flightgear" class="button1"><img src="images1/cloud.svg" class="appicon"><br />FlightGear Simulator</a>
 		</td>
-		<td><a href="aptus://gamsim_foobillardplus" class="button1"><img src="images1/billard.svg" class="appicon"><br />FooBillard++</a>
-		</td>
-	</tr>
-	<tr>
-		<td><a href="aptus://gamsim_gl-117" class="button1"><img src="images1/cloud.svg" class="appicon"><br />gl-117</a>
-		</td>
 		<td><a href="aptus://gamsim_golly" class="button1"><img src="images/figma.svg" class="appicon"><br />Golly</a>
 		</td>
-		<td><a href="aptus://gamsim_lincity-ng" class="button1"><img src="images/figma.svg" class="appicon"><br />LinCity-NG</a>
-		</td>
-		<td><a href="aptus://gamsim_micropolis" class="button1"><img src="images/figma.svg" class="appicon"><br />Micropolis</a>
-		</td>
-		<td><a href="aptus://gamsim_opencity" class="button1"><img src="images/figma.svg" class="appicon"><br />OpenCity</a>
-		</td>
-		<td><a href="aptus://gamsim_openssn" class="button1"><img src="images/figma.svg" class="appicon"><br />OpenSSN</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamsim_lincity-ng" class="button1"><img src="images/figma.svg" class="appicon"><br />LinCity-NG</a>
+		</td>
 		<td><a href="aptus://gamsim_openttd" class="button1"><img src="images/figma.svg" class="appicon"><br />OpenTTD</a>
 		</td>
 		<td><a href="aptus://gamsim_pmars" class="button1"><img src="images/figma.svg" class="appicon"><br />Portable MARS</a>
@@ -79,10 +66,10 @@ Last update: January 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamsim_simutrans" class="button1"><img src="images/figma.svg" class="appicon"><br />Simutrans</a>
 		</td>
-		<td><a href="aptus://gamsim_stormbaancoureur" class="button1"><img src="images1/setrouble.svg" class="appicon"><br />Storm baancoureur</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamsim_stormbaancoureur" class="button1"><img src="images1/setrouble.svg" class="appicon"><br />Storm baancoureur</a>
+		</td>
 		<td><a href="aptus://gamsim_torcs" class="button1"><img src="images1/setrouble.svg" class="appicon"><br />TORCS</a>
 		</td>
 		<td><a href="aptus://gamsim_unknown-horizons" class="button1"><img src="images/figma.svg" class="appicon"><br />Unknown Horizons</a>
