--- a/8/lib/sparky-aptus-appcenter/net-communication.html
+++ b/8/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 4, 2024 by pavroo
+Last update: July 1, 2024 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -58,16 +58,18 @@ Last update: May 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
 		</td>
+		<td><a href="aptus://netcom_finch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Finch</a>
+		</td>
 		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
 		</td>
 		<td><a href="aptus://netcom_gajim" class="button1"><img src="images/gajim.svg" class="appicon"><br />Gajim</a>
 		</td>
 		<td><a href="aptus://netcom_gomuks" class="button1"><img src="images/terminal.svg" class="appicon"><br />Gomuks</a>
 		</td>
-		<td><a href="aptus://netcom_hamsket" class="button1"><img src="images/im.svg" class="appicon"><br />Hamsket</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_hamsket" class="button1"><img src="images/im.svg" class="appicon"><br />Hamsket</a>
+		</td>
 		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
 		</td>
 		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
@@ -78,10 +80,10 @@ Last update: May 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_konversation" class="button1"><img src="images/im.svg" class="appicon"><br />Konversation</a>
 		</td>
-		<td><a href="aptus://netcom_kotatogram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Kotatogram Desktop</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_kotatogram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Kotatogram Desktop</a>
+		</td>
 		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
 		</td>
 		<td><a href="aptus://netcom_linphone-desktop" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
@@ -92,10 +94,10 @@ Last update: May 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_nheko" class="button1"><img src="images/im.svg" class="appicon"><br />Nheko</a>
 		</td>
-		<td><a href="aptus://netcom_pidgin" class="button1"><img src="images/im.svg" class="appicon"><br />Pidgin</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_pidgin" class="button1"><img src="images/im.svg" class="appicon"><br />Pidgin</a>
+		</td>
 		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
 		</td>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
@@ -106,12 +108,12 @@ Last update: May 4, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_sic" class="button1"><img src="images/irc.svg" class="appicon"><br />sic</a>
 		</td>
-		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
-		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
+		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
 		</td>
+		<!--<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
+		</td>-->
 		<td><a href="aptus://netcom_teams-for-linux" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams for Linux</a>
 		</td>
 		<td><a href="aptus://webextra_teamspeak" class="button1"><img src="images/im.svg" class="appicon"><br />TeamSpeak Installer</a>
