--- a/7/lib/sparky-aptus-appcenter/office-text.html
+++ b/7/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 8, 2023 by pavroo
+Last update: August 10, 2023 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -148,6 +148,10 @@ Last update: October 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
 		</td>
+		<td><a href="aptus://offtex_zed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zed</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_zim" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zim</a>
 		</td>
 	</tr>
