--- a/8/lib/sparky-aptus-appcenter/office-text.html
+++ b/8/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 2, 2023 by pavroo
+Last update: August 10, 2024 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -58,18 +58,15 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_efte" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />eFTE</a>
 		</td>
-		<td><a href="aptus://offtex_elvis-tiny" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Elvis-tiny</a>
-		</td>
 		<td><a href="aptus://offtex_emacs-gtk" class="button1"><img src="images/emacs.svg" class="appicon"><br />Emacs</a>
 		</td>
 		<td><a href="aptus://offtex_featherpad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Featherpad</a>
 		</td>
 		<td><a href="aptus://offtex_fte-xwindow" class="button1"><img src="images/text-editor.svg" class="appicon"><br />FTE Xwindow</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_geany" class="button1"><img src="images/geany.svg" class="appicon"><br />Geany</a>
 		</td>
+		
 		<td><a href="aptus://offtex_gedit" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Gedit</a>
 		</td>
 		<td><a href="aptus://offtex_jed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jed</a>
@@ -80,10 +77,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_juffed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />JuffEd</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_jupp" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jupp</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_kakoune" class="button1"><img src="images/terminal.svg" class="appicon"><br />Kakoune</a>
 		</td>
 		<td><a href="aptus://offtex_kate" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kate</a>
@@ -94,10 +91,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_le" class="button1"><img src="images/terminal.svg" class="appicon"><br />LE</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_l3afpad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />L3afpad</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo</a>
 		</td>
 		<td><a href="aptus://offtex_lite-xl" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite XL</a>
@@ -108,10 +105,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_nano" class="button1"><img src="images1/nano.svg" class="appicon"><br />Nano</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_ne" class="button1"><img src="images/terminal.svg" class="appicon"><br />ne</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_nedit" class="button1"><img src="images/terminal.svg" class="appicon"><br />NEdit</a>
 		</td>
 		<td><a href="aptus://offtex_notepadnext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />NotepadNext</a>
@@ -122,10 +119,10 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_pluma" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Pluma</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_pulsar" class="button1"><img src="images/atom.svg" class="appicon"><br />Pulsar</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_scite" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Scite</a>
 		</td>
 		<td><a href="aptus://offtex_sed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Sed</a>
@@ -136,13 +133,15 @@ Last update: December 2, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_tilde" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilde</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_vis" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Vis</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_wordgrinder-x11" class="button1"><img src="images/text-editor.svg" class="appicon"><br />WordGrinder x11</a>
 		</td>
 		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
+		</td>
+		<td><a href="aptus://offtex_zed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zed</a>
 		</td>
 		<td><a href="aptus://offtex_zim" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zim</a>
 		</td>
