--- a/7/lib/sparky-aptus-appcenter/accessories-archivers.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-archivers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 15, 2021 by pavroo
+Last update: August 10, 2024 by pavroo
 -->
 	<head>
 		<title>Accessories -> Archivers | APTus AppCenter</title>
@@ -72,16 +72,18 @@ Last update: October 15, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accarc_parchives" class="button1"><img src="images/file-roller.svg" class="appicon"><br />Parchives</a>
 		</td>
+		<td><a href="aptus://accarc_peazip" class="button1"><img src="images/file-roller.svg" class="appicon"><br />PeaZip</a>
+		</td>
 		<td><a href="aptus://accarc_plzip" class="button1"><img src="images/lzip.svg" class="appicon"><br />PLzip</a>
 		</td>
 		<td><a href="aptus://accarc_rar" class="button1"><img src="images/rar.svg" class="appicon"><br />RAR</a>
 		</td>
 		<td><a href="aptus://accarc_tar" class="button1"><img src="images/tar.svg" class="appicon"><br />TAR</a>
 		</td>
-		<td><a href="aptus://accarc_unar" class="button1"><img src="images/rar.svg" class="appicon"><br />Unarchiver</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accarc_unar" class="button1"><img src="images/rar.svg" class="appicon"><br />Unarchiver</a>
+		</td>
 		<td><a href="aptus://accarc_unrar" class="button1"><img src="images/rar.svg" class="appicon"><br />Unrar</a>
 		</td>
 		<td><a href="aptus://accarc_unrar-free" class="button1"><img src="images/rar.svg" class="appicon"><br />Unrar Free</a>
@@ -92,10 +94,10 @@ Last update: October 15, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accarc_xlunzip" class="button1"><img src="images/lzip.svg" class="appicon"><br />Xlunzip</a>
 		</td>
-		<td><a href="aptus://accarc_xz-utils" class="button1"><img src="images/arc.svg" class="appicon"><br />XZ Utils</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accarc_xz-utils" class="button1"><img src="images/arc.svg" class="appicon"><br />XZ Utils</a>
+		</td>
 		<td><a href="aptus://accarc_zip" class="button1"><img src="images/zip.svg" class="appicon"><br />ZIP</a>
 		</td>
 		<td><a href="aptus://accarc_zipper.app" class="button1"><img src="images/file-roller.svg" class="appicon"><br />Zipper</a>
