--- a/8/lib/sparky-aptus-appcenter/info.html
+++ b/8/lib/sparky-aptus-appcenter/info.html
@@ -3,7 +3,7 @@
 <!--
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 1, 2024 by pavroo
+Last update: August 10, 2024 by pavroo
 -->
 	<head>
 		<title>About | APTus AppCenter</title>
@@ -55,6 +55,7 @@ Last update: July 1, 2024 by pavroo
 - en: pavroo<br>
 - es_AR: Fernando "seacat" Velo<br>
 - es_ES: depaz<br>
+- fi: Jouko Tiilikainen<br>
 - fr: hiver & Jean-Albert Caire<br>
 - hu: Nemomen & BunnyMnemonic<br>
 - id: les kompie<br>
