--- a/7/lib/sparky-aptus-appcenter/office-note.html
+++ b/7/lib/sparky-aptus-appcenter/office-note.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: November 5, 2024 by pavroo
 -->
 	<head>
 		<title>Office -> Notes | APTus AppCenter</title>
@@ -68,6 +68,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offnot_simplenote" class="button1"><img src="images/simplenote.svg" class="appicon"><br />Simplenote</a>
+		</td>
 		<td><a href="aptus://offnot_tomboy-ng" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Tomboy</a>
 		</td>
 		<td><a href="aptus://offnot_zettlr" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Zettlr</a>
