--- a/8/lib/sparky-aptus-appcenter/net-communication.html
+++ b/8/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 1, 2024 by pavroo
+Last update: November 5, 2024 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -134,7 +134,7 @@ Last update: July 1, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netcom_weechat" class="button1"><img src="images/im.svg" class="appicon"><br />WeeChat</a>
 		</td>
-		<td><a href="aptus://netcom_whatsapp-for-linux" class="button1"><img src="images/whatsapp.svg" class="appicon"><br />WhatsApp for Linux</a>
+		<td><a href="aptus://netcom_wasistlos" class="button1"><img src="images/whatsapp.svg" class="appicon"><br />Wasistlos</a>
 		</td>
 	</tr>
 </tbody>
