--- a/7/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/7/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 10, 2024 by pavroo
+Last update: November 5, 2024 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -70,6 +70,8 @@ Last update: August 10, 2024 by pavroo
 	<tr>
 		<td><a href="aptus://netweb_firefox-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest Mozilla Build</a>
 		</td>
+		<td><a href="aptus://netweb_floorp" class="button1"><img src="images0/floorp.png" class="appicon"><br />Floorp</a>
+		</td>
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
 		</td>
 		<td><a href="aptus://netweb_hv3" class="button1"><img src="images/web-browser.svg" class="appicon"><br />hv3</a>
@@ -78,10 +80,10 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_iron" class="button1"><img src="images0/iron.png" class="appicon"><br />Iron</a>
 		</td>
-		<td><a href="aptus://netweb_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
+		</td>
 		<td><a href="aptus://netweb_librewolf" class="button1"><img src="images0/librewolf.png" class="appicon"><br />Librewolf</a>
 		</td>
 		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
@@ -92,10 +94,10 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_mercury-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Mercury</a>
 		</td>
-		<td><a href="aptus://netweb_microsoft-edge-stable" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Microsoft Edge</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_microsoft-edge-stable" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Microsoft Edge</a>
+		</td>
 		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
 		</td>
 		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
@@ -106,10 +108,10 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
 		</td>
-		<td><a href="aptus://netweb_opera-stable" class="button1"><img src="images/opera.svg" class="appicon"><br />Opera</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_opera-stable" class="button1"><img src="images/opera.svg" class="appicon"><br />Opera</a>
+		</td>
 		<td><a href="aptus://netweb_otter-browser" class="button1"><img src="images0/otter.png" class="appicon"><br />Otter</a>
 		</td>
 		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
@@ -120,10 +122,10 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_slimjet" class="button1"><img src="images/slimjet.svg" class="appicon"><br />Slimjet</a>
 		</td>
-		<td><a href="aptus://netweb_thorium-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Thorium</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_thorium-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Thorium</a>
+		</td>
 		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
 		</td>
 		<td><a href="aptus://netweb_ungoogled-chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Ungoogled Chromium</a>
@@ -134,6 +136,8 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_waterfox-kde" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox</a>
 		</td>
 	</tr>
