--- a/8/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/8/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 10, 2024 by pavroo
+Last update: November 5, 2024 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -70,6 +70,8 @@ Last update: August 10, 2024 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_floorp" class="button1"><img src="images0/floorp.png" class="appicon"><br />Floorp</a>
+		</td>
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
 		</td>
 		<td><a href="aptus://netweb_icecat" class="button1"><img src="images0/icecat.png" class="appicon"><br />IceCat</a>
@@ -80,10 +82,10 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_librewolf" class="button1"><img src="images0/librewolf.png" class="appicon"><br />Librewolf</a>
 		</td>
-		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
+		</td>
 		<td><a href="aptus://netweb_luakit" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Luakit</a>
 		</td>
 		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lynx</a>
@@ -94,10 +96,10 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
 		</td>
-		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
+		</td>
 		<td><a href="aptus://netweb_mullvad-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Mullvad Browser</a>
 		</td>
 		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
@@ -108,10 +110,10 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_otter-browser" class="button1"><img src="images0/otter.png" class="appicon"><br />Otter</a>
 		</td>
-		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
+		</td>
 		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
 		</td>
 		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
@@ -122,10 +124,10 @@ Last update: August 10, 2024 by pavroo
 		</td>
 		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
 		</td>
-		<td><a href="aptus://netweb_ungoogled-chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Ungoogled Chromium</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_ungoogled-chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Ungoogled Chromium</a>
+		</td>
 		<!--<td><a href="aptus://netweb_viper-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Viper Browser</a>
 		</td>-->
 		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
