--- a/8/lib/sparky-aptus-appcenter/media-videoplayers.html
+++ b/8/lib/sparky-aptus-appcenter/media-videoplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 8, 2023 by pavroo
+Last update: December 31, 2024 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Players | APTus AppCenter</title>
@@ -84,8 +84,8 @@ Last update: October 8, 2023 by pavroo
 	<tr>
 		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
-		<td><a href="aptus://vidpla_stremio" class="button1"><img src="images/totem.svg" class="appicon"><br />Stremio</a>
-		</td>
+		<!--<td><a href="aptus://vidpla_stremio" class="button1"><img src="images/totem.svg" class="appicon"><br />Stremio</a>
+		</td>-->
 		<td><a href="aptus://vidpla_totem" class="button1"><img src="images/totem.svg" class="appicon"><br />Totem</a>
 		</td>
 		<td><a href="aptus://vidpla_vlc" class="button1"><img src="images/vlc.svg" class="appicon"><br />VLC</a>
